@@ -49,7 +49,13 @@ La versione di Cloud Volumes ONTAP a cui è possibile eseguire l'aggiornamento d
 | Versione corrente | Versioni a cui è possibile eseguire direttamente l'aggiornamento 
 
 
-| 9.13.1 | 9.14.0 
+| 9.14.0 | 9.14.1 
+
+
+.2+| 9.13.1 | 9.14.1 
+
+
+| 9.14.0 
 
 
 | 9.13.0 | 9.13.1 
